# Top-Drives

./: .gitignore  README.md  TODO.md  pyproject.toml
config/: challenge.py  constants.py  logging.py  paths.py  preprocessing.py  scraping.py  update_ownership.py  xpaths.py
data/misc/: track_uppers.json
data/ownership/: owned_cars.json
data/tracks/: track_uppers.json  trackset.json
notebooks/: car_scraping.ipynb  challenge.ipynb  challenge_scraping.ipynb  new_chall.ipynb  ownership.ipynb  preprocess.ipynb  scraping.ipynb  update_ownership.ipynb  zzz_car_scraping.ipynb  zzz_challenge_scraping.ipynb
rough_notebooks/: challenge.ipynb  ownership.ipynb  preprocess.ipynb  scraping.ipynb
src/challenge/: _challenge_helpers.py  challenge.py  solver.py
src/ownership/: update_ownership.py
src/preprocessing/: _preprocessing_helpers.py  preprocessing.py
src/scraping/: _scraping_helpers.py  car_scraping.py  challenge_scraping.py  common.py  scraper.py  scrapers.py  scraping.py
src/update_ownership/: update_ownership.py
src/utils/: timer.py
src/zzz_selenium_scraping/: _scraping_helpers.py  scrapers.py  scraping.py
